[package]
name = "memrange"
version = "0.1.0"
authors = ["coco <coco@hexgolems.com>"]

description = "A simple crate that represents address ranges in memory images"

# These URLs point to more information about the repository.
#documentation = "..."
#homepage = "..."
repository = "https://github.com/theban/memrange"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
#readme = "..."

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["address", "range", "memory-image"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
#license = "..."

# If a project is using a nonstandard license, then this key may be specified in
# lieu of the above key and must point to a file relative to this manifest
# (similar to the readme key).
license-file = "LICENSE"

[dependencies]

